# agent

./: .dockerignore  .env.example  .gitignore  .goreleaser.yaml  .markdownlintignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  QUARKFILE.md  README.md  RELEASE.md  SECURITY.md  SPACE-CONFIG.md  buf.gen.yaml  go.work  go.work.sum
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
architecture/: nats-subjects.md  ownership.json  service-implementation-map.json
cli/: go.mod  go.sum
deploy/: README.md
docs/: architecture.mdx  development.mdx  release.mdx  running-and-debugging.md  running-and-debugging.mdx  services.md  services.mdx  space-config.mdx
e2e/: artifacts.go  artifacts_observability_test.go  artifacts_test.go  ask_test.go  assertions.go  assertions_test.go  build_release_agent_test.go  build_release_prompts_test.go  chat_flow.go  chat_flow_test.go  devops_fixtures.go  devops_release_agent_test.go  devops_release_prompts.go  devops_trace_options_test.go  fixture_files.go  go.mod  go.sum  index_verification.go  index_verification_test.go  indexer_markdown_agent_test.go  indexer_pdf_agent_test.go  indexer_service_test.go  knowledge_trace_options_test.go  local_deterministic_test.go  markdown_documents.go  markdown_prompts_test.go  pdf_documents_test.go  pdf_prompts.go  pdf_prompts_test.go  pdf_scenario.go  prompt_assertions.go  prompt_builders_test.go  runtime_lease_test.go  (+14 more)
services/harness/: Cargo.toml  README.md  build.rs
services/harness/src/: contract.rs  main.rs  proto.rs  service.rs  store.rs
(+797 files in other folders)
