[package]
name = "quark-harness"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
async-nats = "0.46"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
hex = "0.4"
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.45", features = ["fs", "macros", "rt-multi-thread", "signal", "sync"] }
uuid = { version = "1.16", features = ["v4"] }

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"

[dev-dependencies]
tempfile = "3.20"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
